# clifford

./: Cargo.toml  LICENCE-MIT  README.md
algebra/: Cargo.toml
algebra/src/: binary.rs  blade.rs  constructor.rs  lib.rs  parse.rs  ternary.rs  tests.rs  trait_bounds.rs  unary.rs
benches/: inverse.rs  mul.rs  sandwich.rs
cga_3d/: Cargo.toml
cga_3d/src/: lib.rs
cga_3d/tests/: cga_3d_tests.rs
examples/: cga_3d.rs  ga_2d.rs  ga_3d.rs  pga_3d.rs
ga_3d/: Cargo.toml
ga_3d/src/: lib.rs
ga_3d/tests/: ga_3d_tests.rs
geo_traits/src/: lib.rs
macros/: Cargo.toml
macros/src/: algebra.rs  code_gen.rs  dynamic_types.rs  lib.rs
pga_3d/: Cargo.toml
pga_3d/benches/: sandwich.rs
pga_3d/src/: lib.rs
pga_3d/tests/: pga_3d_tests.rs
proc_macros/: Cargo.toml
proc_macros/src/: algebra.rs  code_gen.rs  code_gen_mv.rs  lib.rs  types.rs
src/: cga_2d.rs  cga_3d.rs  define.rs  ga_3d.rs  ga_3d_former.rs  lib.rs  pga_3d.rs  va_3d.rs  va_3d_manual.rs  va_3d_mv.rs
tests/: cga_3d_tests.rs  ga_3d_tests.rs  pga_3d_tests.rs
