[package]
name = "clifford"
version = "0.1.2"
edition = "2021"
authors = ["Fraser Balch <fraser.balch@gmail.com>"]
keywords = ["clifford", "algebra", "geometric"]
license = "MIT"

[workspace]
members = ["macros", "algebra"]

[dependencies]
macros = { path = "./macros" }
geo_traits = { git = "https://github.com/frsrblch/geo_traits", version = "0.5" }
bytemuck = "1"

[dev-dependencies]
rand = "0.9"
