[package]
name = "clifford"
version = "0.1.3"
edition = "2021"
authors = ["Fraser Balch <fraser.balch@gmail.com>"]
keywords = ["clifford", "algebra", "geometric"]
license = "MIT"

[workspace]
members = ["macros", "algebra"]

[dependencies]
macros = { path = "./macros" }
bytemuck = "1"
geo_traits = { git = "https://github.com/frsrblch/geo_traits", version = "0.6" }
num-traits = "0.2"

[dev-dependencies]
rand = "0.9"
