[package]
name = "algebra"
version = "0.1.0"
edition = "2021"
authors = ["Fraser Balch <fraser.balch@gmail.com>"]
keywords = ["clifford", "algebra", "geometric"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.52"
quote = "1.0.26"
syn = "2.0.0"
itertools = "0.10.5"
rand = "0.8.5"
strum = { version = "0.24.1", features = ["derive"] }
