[package]
name = "algebra"
version = "0.1.0"
edition = "2021"
authors = ["Fraser Balch <fraser.balch@gmail.com>"]
keywords = ["clifford", "algebra", "geometric"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "2"
itertools = "0.10"
rand = "0.9"
strum = { version = "0.24", features = ["derive"] }
