[package]
name = "macros"
version = "0.0.0"
authors = ["Fraser Balch <farseer.ulwithy@gmail.com>"]
description = "A `cargo generate` template for quick-starting a procedural macro crate"
keywords = ["clifford", "algebra"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.23"
proc-macro2 = "1.0.49"
syn = "1.0.107"
proc-macro-error = "1.0.4"
either = "1.8.0"
